.. Shared Source Software
   Copyright (c) 2013 Lovely Systems GmbH

========================
Changes for Lovey Pyrest
========================

2013/10/02 0.0.3
================

 - added documentation

2013/10/01 0.0.2
================

 - include DEFAULT_FORMAT_VALIDATORS from validictory

2013/10/01 0.0.1
================

 - added basic functionallity:
    * raise a 405 if an unimplemented method is called on a service
    * provide schema validation
    * raise correct errors if the `Accept` or `Content-Type` headers mismatch

 - initial commit