@@ -1,6 +1,7 @@
 *.py[co]
 *.egg
 *.egg-info
+out/
 bin/
 develop-eggs/
 parts/
